feat: 更新 datasync/example/chronicle 模块